import React from 'react';
import renderer from 'react-test-renderer';
import { Word } from 'bw-axiom';

function getComponent(props = { x: 0, y: 0 }) {
  return renderer.create(
    <Word { ...props } />
  );
}

describe('Word', () => {
  it('renders with defaultProps', () => {
    const component = getComponent();
    const tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });

  it('renders with disabled', () => {
    const component = getComponent({ disabled: true });
    const tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });

  it('renders with hidden', () => {
    const component = getComponent({ hidden: true });
    const tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });

  it('renders with hidden and disabled', () => {
    const component = getComponent({
      disabled: true,
      hidden: true,
    });
    const tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });

  it('renders with onClick', () => {
    const component = getComponent({ onClick: () => {} });
    const tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });

  describe('renders with color', () => {
    [
      'rose',
      'pink',
      'purple',
      'lilac',
      'blue',
      'teal',
      'green',
      'chartreuse',
      'amber',
      'orange',
      'brown',
      'grey',
    ].forEach((color) => {
      it(color, () => {
        const component = getComponent({ color });
        const tree = component.toJSON();
        expect(tree).toMatchSnapshot();
      });
    });
  });
});
