// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Word renders with color amber 1`] = `
<text
  className="ax-word ax-word--amber"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color blue 1`] = `
<text
  className="ax-word ax-word--blue"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color brown 1`] = `
<text
  className="ax-word ax-word--brown"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color chartreuse 1`] = `
<text
  className="ax-word ax-word--chartreuse"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color green 1`] = `
<text
  className="ax-word ax-word--green"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color grey 1`] = `
<text
  className="ax-word ax-word--grey"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color lilac 1`] = `
<text
  className="ax-word ax-word--lilac"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color orange 1`] = `
<text
  className="ax-word ax-word--orange"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color pink 1`] = `
<text
  className="ax-word ax-word--pink"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color purple 1`] = `
<text
  className="ax-word ax-word--purple"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color rose 1`] = `
<text
  className="ax-word ax-word--rose"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color teal 1`] = `
<text
  className="ax-word ax-word--teal"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with defaultProps 1`] = `
<text
  className="ax-word"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

<<<<<<< HEAD
exports[`Word renders with disabled 1`] = `
<text
  className="ax-word ax-word--disabled"
  onClick={false}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with hidden 1`] = `
<text
  className="ax-word ax-word--hidden"
  onClick={false}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with hidden and disabled 1`] = `
<text
  className="ax-word ax-word--hidden"
  onClick={false}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with onClick 1`] = `
<text
  className="ax-word ax-word--clickable"
  onClick={[Function]}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;
